--- a/styles/aboutstyles.css
+++ b/styles/aboutstyles.css
@@ -35,7 +35,7 @@ footer {
    text-align: center;
    */
 }
-#headerp {
+.headerp {
   margin-right:50px;
   margin-top: .2rem;
   margin-bottom: 0;
@@ -44,7 +44,7 @@ footer {
   padding: 0;
 
 }
-#boldp {
+.boldp {
   margin-right:50px;
   margin-top: .2rem;
   margin-bottom: 0;
@@ -57,7 +57,7 @@ footer {
   font-weight: bold;
 }
 
-#bolditalicp {
+.bolditalicp {
   margin-right:0px;
   margin-top: 0px;
   margin-bottom: 0;
@@ -71,7 +71,7 @@ footer {
   font-style:italic;
 }
 
-#regularp {
+.regularp {
   margin-right:50px;
   margin-top: .1rem;
   margin-bottom: 0;
@@ -83,7 +83,7 @@ footer {
   padding-bottom:10px;
 }
 
-#sidebarh3 {
+.sidebarh3 {
   margin-right:0;
   margin-top: .2rem;
   margin-bottom: 0;
@@ -96,7 +96,7 @@ footer {
 
 }
 
-#footerp {
+.footerp {
   margin-right:100px;
   margin-left:100px;
   margin-top:2px;
@@ -105,7 +105,7 @@ footer {
   padding:0;
 }
 
-#sectionh3 {
+.sectionh3 {
   margin-right:0;
   margin-top: .2rem;
   margin-bottom: 0;
@@ -117,7 +117,7 @@ footer {
   padding-bottom:5px;
 
 }
-#navlist {
+.navlist {
   margin-right:0;
   margin-top:0;
   margin-bottom: 0;
